src/css/main.scss
$images: "./../../assets";

html {
    height: 100%;
}

body {
    -webkit-user-select: none;
    user-select: none;
    overflow: hidden;
    font-size: 14px;
    height: 100%;
    line-height: normal !important;
}

#display-container {
    position: absolute;
    z-index: 2;
    overflow: hidden;
    -webkit-user-select: auto;
    user-select: auto;
    color: #BBBBBB;
    font-family: "Courier New", monospace;
    text-align: left;
    font-size: 1em;
    background-color: black;
    text-shadow: none;
}

#display {
    position: absolute;
    z-index: 2;
    overflow-y: scroll;
    box-sizing: border-box;
    color: #BBBBBB;
    border: 0px solid silver;
    font-family: "Courier New", monospace;
    text-align: left;
    font-size: 1em;
    background-color: black;
    text-shadow: none;
    padding: 2px;
    overflow: hidden;

    /*
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);    
    */
}

#display-view {
    z-index: 3;
    position: absolute;
    top: 0px;
    left: 0px;

    /*
    position: relative;
    top: 2px;
    left: 2px;
    right: 2px;
    bottom: 2px;
    */
}

#display-background {
    top: 0px;
    z-index: 1;
    left: 0px;
    right: 0px;
    position: absolute;
    pointer-events: none;
}

#display-overlay {
    top: 0px;
    z-index: 2;
    left: 0px;
    right: 0px;
    position: absolute;
    pointer-events: none;
}

#display-split {
    position: absolute;
    z-index: 3;
    overflow: hidden;
    -webkit-user-select: auto;
    user-select: auto;
    box-sizing: border-box;
    left: 0px;
    right: 0px;
    bottom: 0px;
    height: 100%;
    color: #BBBBBB;
    border: 0px solid silver;
    font-family: "Courier New", monospace;
    text-align: left;
    font-size: 1em;
    background-color: black;
    text-shadow: none;
    padding: 2px;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
}

#display-split-bar {
    background-color: menu;
    height: 4px;
    cursor: row-resize;
    position: absolute;
    background-color: menu;
    z-index: 1000;
    width: 100%;
    right: 0px;
    box-sizing: border-box;
}

#display-split-ghost-bar {
    height: 4px;
    right: 12px;
    left: 0;
    background-color: transparent;
    opacity: 0.5;
    position: absolute;
    cursor: row-resize;
    z-index: 9991;
    box-sizing: border-box;
}

#display-split-frame {
    height: 20%;
    min-height: 150px;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 12px;
    display: none;
    background-color: black;
    overflow: hidden;
    z-index: 10;
}

#display-border {
    position: absolute;
    z-index: 1;
    box-sizing: border-box;
}

.overlay-line {
    position: absolute;
    clear: both;
}

#Character,
#CmdCharacter {
    position: absolute;
    visibility: hidden;
    height: auto;
    width: auto;
    font-family: "Courier New", monospace;
    font-size: 1em;
    border-bottom: 1px solid #d7d7d7;
    top: -100px;
    left: -100px;
    margin: 0px;
    text-decoration: underline overline;
    line-height: normal;
}

#command {
    position: absolute;
    z-index: 4;
    box-sizing: border-box;
}

#commandbox {
    position: absolute;
    box-sizing: border-box;
}

#commandleft {
    float: left;
    box-sizing: border-box;
}

#commandright {
    float: right;
    box-sizing: border-box;
}

#commandinput {
    outline: none;
    resize: none;
    overflow: hidden;
}

#commandinput:focus {
    outline: none;
}

#buttonbar {
    z-index: 5;
    width: 32px;
    position: absolute;
}

.command-history {
    position: absolute !important;
    top: 2px;
    right:64px;
}

#btnParsing {
    top: 2px;
    right:42px;
}

#btnTriggers {
    top: 2px;
    right:22px;
}

#advedit, #btnTriggers, #btnParsing {
    position: absolute;
    border-radius: 4px;
}

.find {
    position: absolute;
    display: none;
    z-index: 100;
}

.find input,
.findlay-find input:focus {
    outline: none;
    position: relative;
}

.find button {
    display: inline-block;
    outline: none;
}

.find button:disabled,
.find button:disabled:hover {
    cursor: not-allowed;
}

.find button:hover,
.find button.active:hover {
    cursor: default;
}

.find button:active {
    cursor: default;
}

.find button.active {
    cursor: default;
}

.find-count {
    display: inline-block;
    width: 100px;
    font-family: Arial, Helvetica, sans-serif;
    padding: 4px;
    text-align: center;
}

.find-selection {
    display: none !important;
}

/** status */

#status {
    z-index: 100;
    position: absolute;
    cursor: default;
    box-sizing: border-box;
}

#status-border {
    position: absolute;
    box-sizing: border-box;
}

#environment {
    position: absolute;
    overflow: hidden;
    box-sizing: border-box;
}

#environmentleft {
    position: relative;
    top: 15px;
    left: 0px;
    float: left;
    width: 50px;
    height: 50px;
}

#environmentcenter {
    position: relative;
    top: 5px;
    left: 0px;
    float: left;
    width: 50px;
    height: 50px;
}

#environmentright {
    position: relative;
    top: 15px;
    left: 0px;
    float: left;
    width: 50px;
    height: 50px;
}

#environmentweather {
    position: relative;
    top: 0px;
    left: 0px;
    width: 150px;
    height: 50px;
    z-index: 100;
}

#character-name {
    overflow: hidden;
    text-overflow: ellipsis;
}

#lefthandweapon {
    position: absolute;
}

#righthandweapon {
    position: absolute;
}

#experience {
    position: absolute;
    font-size: 12px;
}

#experience div span:first-child {
    display: inline-block;
}

#experience div span:nth-child(2) {
    float: right;
}

#experience div span:nth-child(2) {
    text-align: right;
}

#bars {
    position: absolute;
    overflow: auto;
    overflow-x: hidden;
    box-sizing: border-box;
}

.combat-bar {
    position: relative;
}

.combat-name {
    position: absolute;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.combat-bar .progressbar {
    position: absolute;
    width: auto;
}

#body {
    position: absolute;
    box-sizing: border-box;
    font-size: 12px;
}

#body svg {
    image-rendering: crisp-edges;
}

#armor,
#health,
#health.on:hover,
#armor.on:hover {
    position: absolute;
}

#tail,
#leftwing,
#rightwing {
    display: none;
}

.progressbar {
    float: right;
    overflow: hidden;
}

.progressbar .progressbar-text {
    position: absolute;
    z-index: 1;
}

.progressbar .progressbar-value {
    float: right;
}

#lagMeter {
    position: absolute;
    width: auto;
    box-sizing: border-box;
}

/*end status*/

.find-highlight {
    display: inline-block;
    height: 100%;
    pointer-events: none;
    position: absolute;
    box-sizing: border-box;
    white-space: pre;
    overflow: hidden;
}

.select-text {
    background-color: rgb(51, 153, 255);
    color: rgb(255, 255, 255);
    display: inline-block;
    height: 100%;
    pointer-events: none;
    position: absolute;
    box-sizing: border-box;
    white-space: pre;
    overflow: hidden;
    opacity: 0.85;
}

.select-text.trc, .find-highlight.trc {
    border-top-right-radius: 4px;
}

.select-text.tlc, .find-highlight.tlc {
    border-top-left-radius: 4px;
}

.select-text.brc, .find-highlight.brc {
    border-bottom-right-radius: 4px;
}

.select-text.blc, .find-highlight.blc {
    border-bottom-left-radius: 4px;
}

.isb {
    height: 7px;
    width: 7px;
    -webkit-mask-image: radial-gradient(circle 9px at 0 0, transparent 0, transparent 7px, black 7px);
}

.iet {
    height: 7px;
    width: 7px;
    -webkit-mask-image: radial-gradient(circle 9px at 100% 100%, transparent 0, transparent 7px, black 7px);
}

.ieb {
    height: 7px;
    width: 7px;
    -webkit-mask-image: radial-gradient(circle 9px at 100% 0, transparent 0, transparent 7px, black 7px);
}

dialog {
    border: 1px solid black;
    box-shadow: 3px 3px 5px #535353;
}

.dialog-footer {
    background-color: #F5F5F5;
    box-shadow: inset 0 1px 0 #fff;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 5px;
    border-top: 1px solid #ddd;
}

.dialog-footer .btn {
    margin: 5px;
}

.dialog-header {
    background-color: #F5F5F5;
    box-shadow: inset 0 -1px 0 #ddd;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    padding: 5px;
    border-bottom: 1px solid #fff;
}

.dialog-header .btn {
    margin: 5px;
}

.command-history ul {
    overflow: auto;
}

